Ver funcional producto, implementando menu main